Version 3.4.0 - 2014-11-03

Version 3.2.0 - 2014-05-22

Version 3.0.0 - 2013-10-25
* Initial Release