@@ -195,8 +195,9 @@ class StatementLine:
         amount_second_currency = None
         second_currency = None
         if self.statement_currency != self.company_currency:
-            amount_second_currency = abs(Currency.compute(
-                self.statement_currency, amount, self.company_currency))
+            with Transaction().set_context(date=self.date.date()):
+                amount_second_currency = abs(Currency.compute(
+                    self.statement_currency, amount, self.company_currency))
             second_currency = self.statement_currency
             counterpart.amount_second_currency = amount_second_currency
             counterpart.second_currency = second_currency
