@@ -1,3 +1,5 @@
+* Use line date to compute secound currency amount
+
 Version 3.4.0 - 2014-11-03
 
 Version 3.2.0 - 2014-05-22
